2024-10-10T00:47:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11265385091 # 444
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-10
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 418 808 / 421 811
* notice: next accum: outdated-unq outdated-all / unq all: 418 808 / 422 812
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-09]

2024-10-09T00:47:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11246126992 # 443
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-09
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 418 808 / 420 810
* notice: next accum: outdated-unq outdated-all / unq all: 418 808 / 421 811
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-10-08]

2024-10-03T00:47:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11153898013 # 437
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-03
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 416 806 / 420 810
* notice: next accum: outdated-unq outdated-all / unq all: 418 808 / 420 810
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-18] / []

2024-09-30T00:50:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11097408377 # 434