@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-10T00:47:30Z",
-  "count_outdated" : 808,
-  "uniques_outdated" : 418,
+  "timestamp" : "2024-10-12T00:46:12Z",
+  "count_outdated" : 809,
+  "uniques_outdated" : 419,
   "count" : 812,
   "uniques" : 422,
   "clones" : [
-    {
-      "timestamp": "2024-09-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-29T00:00:00Z",
       "count": 1,
