@@ -1,3 +1,12 @@
+2024-10-12T00:46:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11301206090 # 446
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-12
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 418 808 / 422 812
+* notice: next accum: outdated-unq outdated-all / unq all: 419 809 / 422 812
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-09-28] / []
+
 2024-10-10T00:47:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11265385091 # 444
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-10
